<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5CAE9"
    tools:context="com.example.derekdesktop.assign22017derekaherne.MainActivity">

    <TextView
        android:id="@+id/cameraTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="#3F51B5"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClickCam"
        android:text="@string/cameraBtn"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/cameraBtn"
        app:layout_constraintBottom_toTopOf="@+id/picTextView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/picTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignStart="@+id/cameraTextView"
        android:layout_below="@+id/cameraTextView"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="#5C6BC0"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClickGallery"
        android:text="@string/picBtn"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/picBtn"
        app:layout_constraintTop_toBottomOf="@+id/cameraTextView"
        app:layout_constraintBottom_toTopOf="@+id/activityTextView"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/activityTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignEnd="@+id/picTextView"
        android:layout_below="@+id/picTextView"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="#7986CB"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClickActivity"
        android:text="@string/activityBtn"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/activityBtn"
        app:layout_constraintTop_toBottomOf="@+id/picTextView"
        app:layout_constraintBottom_toTopOf="@+id/outputView"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/outputView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignEnd="@+id/activityTextView"
        android:layout_below="@+id/activityTextView"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="#E8EAF6"
        android:gravity="center"
        android:lines="2"
        android:text=" "
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityTextView"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#3F51B5"
        android:text="@string/sendBtn"
        android:textColor="#FFF"
        android:onClick="onSend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/sendBtn" />
</android.support.constraint.ConstraintLayout>
